--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -9,6 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <java.version>1.7</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+    </properties>
+
     <artifactId>acceptance-tests</artifactId>
 
     <dependencies>
@@ -42,7 +48,11 @@
             <artifactId>hamcrest-json</artifactId>
             <version>0.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.7</version>
+        </dependency>
     </dependencies>
 
 
