--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -2,12 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>swagger-java-api</artifactId>
-        <groupId>com.github.jmccloskey</groupId>
-        <version>0.1.0</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.github.jmccloskey</groupId>
+    <artifactId>acceptance-tests</artifactId>
+    <version>0.1.0</version>
 
     <properties>
         <java.version>1.7</java.version>
@@ -15,7 +14,28 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
-    <artifactId>acceptance-tests</artifactId>
+    <profiles>
+        <profile>
+            <id>acceptance-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19.1</version>
+                        <configuration>
+                            <excludes>
+                                <exclude>none</exclude>
+                            </excludes>
+                            <includes>
+                                <include>**/RunCukesTest.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
