--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     working_dir: /app
     volumes:
       - ./api:/app
-    command: mvn package
+    command: mvn clean package
 
   api:
     image: api
